fixing some layout problems

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@
 }
 
 .container h1 {
-  margin: 0;
   font-style: italic;
   text-align: center;
   font-size: 3rem;
@@ -102,6 +101,7 @@
 }
 
 .poem p {
+  margin: 0;
   color: black;
   font-size: 1.25rem;
 }
@@ -110,6 +110,7 @@
 @media only screen and (min-width: 360px) and (max-width: 840px) and (orientation: portrait) {
   /* Your styles here */
   .container {
+    min-height: 100vh;
     height: 100vh;
     min-width: 100vw;
     width: 100vw;
